syntax = "proto3";
import "common/transaction.proto";
import "common/empty.proto";

option csharp_namespace = "CardsMicroservice";

package CardsMicroservice;

service Cards {
  rpc Get (GetCardsRequest) returns (GetCardsResponse);
  rpc GetBlocks (GetBlocksRequest) returns (GetBlocksResponse);
  rpc GetTransactions (GetTransactionsRequest) returns (GetTransactionsResponse);
  rpc Transfer (TransferRequest) returns (TransferResponse);
  rpc Setup(SetupRequest) returns (Empty);
  rpc TearDown(Empty) returns (Empty);
}

message Block {
  string id = 1;
  string cardId = 2;
  string transactionId = 3;
  int64 timestamp = 4;
}

message Card {
  string id = 1;
  string number = 2;
  string accountId = 3;
}

message GetCardsRequest {
  repeated string ids = 1;
}

message GetCardsResponse {
  repeated Card cards = 1;
}

message GetBlocksRequest {
  string cardId = 1;
}

message GetBlocksResponse {
  repeated Block blocks = 1;
}

message GetTransactionsRequest {
  repeated string ids = 1;
}

message GetTransactionsResponse {
  repeated Transaction transactions = 1;
}

message TransferRequest {
  string cardId = 1;
  string recipient = 5;
  float amount = 3;
}

message TransferResponse {
  Transaction transaction = 1;
}

message SetupRequest {
  repeated Card cards = 1;
  repeated Block blocks = 2;
}